@@ -5,7 +5,8 @@
   * A custom background and text is not yet supported, only a light and dark theme
   * The following imports are missing and may not be implemented at all if not requested: Basket, EPIM HTML, KeyNote, KnowIt, Treepad Lite, TuxCards
   * New: Export to PDF support for hyperlinks (work of @ForeverRainbow)
-  * New: Import from Markdown file/folder (work of @ForeverRainbow)
+  * New: Import from markdown file/folder (work of @ForeverRainbow)
+  * New: Option for markdown auto replacement to rich text (work of @ForeverRainbow)
   * New: Duplicate a node and its subnodes (before only the selected node could be duplicated)
   * New: You can now right click a node or an anchor and select to copy a link to it in the clipboard, then paste the link into rich text
   * New: Formatting tag to indent/unindent (work of @metal450)
